--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension CatalystX-Crudite
 
+0.16 Sat May 18 12:08:57 2013 CEST
+    [Improvements]
+        - Give the user more freedom over his layout: The TT view doesn't
+          mandate wrapper.tt and the login form is rendered as a template as
+          well, so you need to provide your own login/login.tt
+
 0.15 Thu May  2 11:19:11 2013 CEST
     [Improvements]
         - Removed xt/ - this is taken care of by author-side perlcritic
