--- a/README
+++ b/README
@@ -27,6 +27,27 @@ DESCRIPTION
     using "File::ShareDir", so they can't be found from the uninstalled
     repository. I hope to improve this in a later version.
 
+CONFIGURATION
+    The user can specify extra args for web libraries such as specific
+    versions. Example:
+
+        __PACKAGE__->config_app(
+            name                     => 'MyApp',
+            'CatalystX::Crudite'     => {
+                web_library => {
+                    Bootstrap => { version => '2.3.2' },
+                },
+            },
+            # other standard Catalyst config such as:
+            'Plugin::Static::Simple' => {
+                include_path => [ __PACKAGE__->path_to(qw(root static)), \&dir2 ],
+                ignore_extensions => [qw(tmpl tt tt2 xhtml)]
+            }
+        );
+
+    By default the latest versions of the web libraries - Bootstrap, jQuery,
+    jQueryUI and DataTables - are laoded.
+
 AUTHORS
     The following person is the author of all the files provided in this
     distribution unless explicitly noted otherwise.
@@ -37,7 +58,7 @@ COPYRIGHT AND LICENSE
     The following copyright notice applies to all the files provided in this
     distribution, including binary files, unless explicitly noted otherwise.
 
-    This software is copyright (c) 2013 by Marcel Gruenauer.
+    This software is copyright (c) 2013-2014 by Marcel Gruenauer.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
